@@ -159,12 +159,6 @@ TEA_CONFIG_CFLAGS
 
 TEA_ENABLE_SYMBOLS
 
-if test "${SHARED_BUILD}" = "1" ; then
-    CFLAGS="${CFLAGS} \${CFLAGS_DEFAULT} \${CFLAGS_WARNING} \${SHLIB_CFLAGS}"
-else
-    CFLAGS="${CFLAGS} \${CFLAGS_DEFAULT} \${CFLAGS_WARNING}"
-fi
-
 #--------------------------------------------------------------------
 # For Unix/Tk builds, make sure that the X libraries/headers are found.
 # This must be called after TEA_CONFIG_CFLAGS as it adjusts LIBS.
